metadata/force-app/main/default/objects/CustomName_uwptp__c/CustomName_uwptp__c.object-meta.xml
<CustomObject>
    <description>Description_DDSUw</description>
    <label>CustomLabel_nPaEs</label>
    <nameField>
        <label>CustomLabel_nPaEs</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_nPaEss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>