metadata/force-app/main/default/objects/CustomName_uwptp__c/fields/CustomField_AKOVH__c.field-meta.xml
<CustomField>
    <fullName>CustomField_AKOVH__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldxGLZL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>