metadata/force-app/main/default/objects/CustomName_uwptp__c/fields/CustomField_RtDUH__c.field-meta.xml
<CustomField>
    <fullName>CustomField_RtDUH__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldUXWOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>