metadata/force-app/main/default/objects/CustomName_uwptp__c/fields/CustomField_SayIW__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SayIW__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgqKTX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>